# Finite

./: .env  Cargo.toml  Dockerfile  docker-compose.yml  finit.db  pruebas_e2e.py  verificar_db.py
infraestructura/: esquema.sql  okupo.db  okupo_init.sql
src/: lib.rs  main.rs
src/aplicacion/: mod.rs
src/aplicacion/servicios/: actualizar_documentacion.rs  configurar_horarios.rs  configurar_precio_subcategoria.rs  configurar_precios_dinamicos.rs  consultar_perfil_colaborador.rs  gestionar_estado_solicitud.rs  gestionar_mensajes.rs  gestionar_subcategoria.rs  listar_categorias.rs  listar_colaboradores_marketplace.rs  listar_solicitudes.rs  listar_subcategorias.rs  login_usuario.rs  mod.rs  registro_colaborador.rs  registro_usuario.rs  solicitud_servicio.rs  verificar_colaborador.rs
src/dominio/: categoria.rs  colaborador.rs  configuracion_precio.rs  disponibilidad.rs  mensaje.rs  mod.rs  precio_subcategoria.rs  resennia.rs  servicio.rs  solicitud.rs  token.rs  urgencia.rs  usuario.rs
src/dominio/puertos/: mod.rs  repositorio_categoria.rs  repositorio_colaborador.rs  repositorio_mensaje.rs  (+6 more)
src/infraestructura/: mod.rs  mysql_repositorio_categoria.rs  mysql_repositorio_colaborador.rs  mysql_repositorio_configuracion_precio.rs  mysql_repositorio_disponibilidad.rs  mysql_repositorio_mensaje.rs  mysql_repositorio_precio.rs  mysql_repositorio_servicio.rs  mysql_repositorio_solicitud.rs  mysql_repositorio_usuario.rs  sqlite_repositorio.rs
tests/: colaborador_test.rs  identidad_test.rs  marketplace_test.rs  navegacion_test.rs  pruebas_temporales.rs  solicitud_test.rs
(+3 files in other folders)
