[package]
name = "finit"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "sqlite", "chrono", "rust_decimal"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors"] }
rust_decimal = { version = "1.0", features = ["serde-float"] }
async-trait = "0.1"
bcrypt = "0.15"
jsonwebtoken = "9.3"
